add images folder

--- a/independent-project.html
+++ b/independent-project.html
@@ -5,5 +5,6 @@
   </head>
   <body>
     <script src="js/scripts.js"></script>
+    <p><img src="images/triangle.png">alt="A photo of a chalkboard with calculations."</p>
   </body>
 </html>
