--- a/independent-project.html
+++ b/independent-project.html
@@ -4,7 +4,10 @@
     <title>Triangle tracker.</title>
   </head>
   <body>
+    <h1>triangle tracker<h1>
+
     <script src="js/scripts.js"></script>
+    
     <p><img src="images/triangle.png">alt="A photo of a chalkboard with calculations."</p>
   </body>
 </html>
