add final corrections

--- a/independent-project.html
+++ b/independent-project.html
@@ -4,10 +4,9 @@
     <title>Triangle tracker.</title>
   </head>
   <body>
-    <h1>triangle tracker<h1>
-
+    <h1>Triangle Tracker<h1>
     <script src="js/scripts.js"></script>
-    
-    <p><img src="images/triangle.png">alt="A photo of a chalkboard with calculations."</p>
-  </body>
+
+    <p><img src="images/triangle.png">A photo of a triangle chalkboard with calculations</p>
+    </body>
 </html>
