--- a/independent-project.html
+++ b/independent-project.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Triangle tracker.</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>Triangle Tracker<h1>
