--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Triangle Tracker<h1>
+    <h1>Triangle Tracker</h1>
     <script src="js/scripts.js"></script>
 
     <p><img src="images/triangle.png">A photo of a triangle chalkboard with calculations</p>
